# au_os

./: .gitignore  CMakeLists.txt  Makefile  README.txt
inc/: alloc.h  allocator.h  concurrency.h  concurrency_util.h  desc.h  ints.h  memory.h  ramfs.h  serial.h  string.h  throw.h  time.h
src/: alloc.c  allocator.c  backtrace.c  balloc.c  bootstrap.S  concurrency.c  concurrency_util.S  entry.S  ints.c  list.c  main.c  main.d  memory.c  paging.c  print.c  ramfs.c  serial.c  string.c  throw.c  time.c
